# stylelenses

./: .editorconfig  .gitignore  README.md  stylelens.cabal
src/: Main.hs  Style.hs  Types.hs
