name:                stylelens
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stylelens#readme
license:             BSD3
license-file:        LICENSE
author:              Stefan Rimaila
maintainer:          stefan@rimaila.fi
copyright:           2018 Stefan Rimaila
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stylelens
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Style
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , aeson
                     , lens-aeson
                     , unordered-containers
                     , vector
                     , lens
